--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,9 @@
 // Components
 @import "landing-page";
 @import "admin";
+@import "auth";
 @import "block-image";
 @import "dengdek";
 @import "mumbul";
+@import "card-media";
+@import "bg-title";
