--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,8 +11,10 @@
 @import "landing-page";
 @import "admin";
 @import "auth";
+@import "content";
 @import "block-image";
 @import "dengdek";
 @import "mumbul";
 @import "card-media";
 @import "bg-title";
+@import "footer";
