Redesain  On branch satudata  Changes to be committed: 	modified:   composer.lock 	modified:   resources/assets/sass/_landing-page.scss 	modified:   resources/assets/sass/_mumbul.scss 	modified:   resources/assets/sass/app.scss 	modified:   resources/views/includes/head.blade.php 	modified:   resources/views/pages/landing-page/footer.blade.php 	modified:   resources/views/pages/landing-page/header.blade.php 	modified:   resources/views/pages/landing-page/index.blade.php 	modified:   resources/views/pages/landing-page/navbar.blade.php 	modified:   resources/views/pages/landing-page/section-1.blade.php 	modified:   resources/views/pages/landing-page/section-2.blade.php 	modified:   resources/views/pages/landing-page/section-3.blade.php
	public/assets/
	resources/assets/sass/_carousel.scss
	resources/assets/sass/_mumbul2.scss

--- a/resources/assets/sass/_landing-page.scss
+++ b/resources/assets/sass/_landing-page.scss
@@ -107,7 +107,7 @@
 // Section 1
 
 #landing-section-1 {
-  background-image: radial-gradient(circle, #2196f3, #000);
+ background-color: #151932;
 }
 
 // Section 2
