--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 // Variables
 @import "variables";
-
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 // Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap";
 
